# lfo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Arduino/LFO/: Apa102Port.h  DisplayInterface.h  Globals.h  LFO.ino  MidiController.h  OledDisplay.h  PotController.h  RotaryButton.cpp  RotaryButton.h  SettingsMenu.cpp  SettingsMenu.h  WaveTable.h
tests/: .clang-format  WaveTableTest.cpp  main.cpp
tools/: curves.cpp  gen_sine.cpp
